--- a/Assignment/views/user/seller/home.ejs
+++ b/Assignment/views/user/seller/home.ejs
@@ -27,19 +27,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 
 
+	<!-- header-bot -->
+<div class="header-bot">
+	<div class="header-bot_inner_wthreeinfo_header_mid">
+		<div class="col-md-4 header-middle">
+			
+		</div>
+		<!-- header-bot -->
+			<div class="col-md-4 logo_agile">
+				
+			</div>
+        <!-- header-bot -->
+		<div class="col-md-4 agileits-social top_content">
+			<a class="nav-link collapsed" href="/login" data-toggle="collapse" data-target="#collapsePages"
+                    aria-expanded="true" aria-controls="collapsePages" style="float: right;">
+                    <i class="fas fa-arrow-right btn btn-primary"></i>
+                    <span>Log In</span>
+                </a>
+		</div>
+		<div class="clearfix"></div>
+	</div>
+</div>
+<!-- //header-bot -->
 
 		
 
 <!-- /new_arrivals --> 
 	<div class="new_arrivals_agile_w3ls_info"> 
 		<div class="container">
-		    <h3 class="wthree_text_info">All <span>Products</span></h3>		
+		    <h3 class="wthree_text_info">All <span>All Food Item</span></h3>		
 				<div id="horizontalTab">
-						<ul class="resp-tabs-list">
-							<li> All</li>
-							<li> Tools</li>
-							<li> Tructors</li>
-						</ul>
+						
 					<div class="resp-tabs-container">
 					<!--/tab_one-->
 						<div class="tab1">
@@ -51,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<img src="/assets/img/<%= productInformation[i].imageURL %>" alt="" class="pro-image-back">
 											<div class="men-cart-pro">
 												<div class="inner-men-cart-pro">
-													<a href="/home/farmer/addcarts" class="link-product-add-cart">Quick View</a>
+													<a href="/home/manager/customizeProducts/viewProduct" class="link-product-add-cart">Quick View</a>
 												</div>
 											</div>
 											<span class="product-new-top"></span>
@@ -61,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<h4><a href="single.html"><%= productInformation[i].productName %></a></h4>
 										<div class="info-product-price">
 											<span class="item_price">/<%= productInformation[i].price %></span>
-											<del>$69.71</del>
+											
 										</div>
 													
 									</div>
@@ -79,6 +97,70 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								
 	</div>
 	<!-- //new_arrivals --> 
+
+	<!-- login -->
+	<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content modal-info">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+				</div>
+				<div class="modal-body modal-spa">
+					<div class="login-grids">
+						<div class="login">
+							<div class="login-bottom">
+								<h3>Sign up for free</h3>
+								<form>
+									<div class="sign-up">
+										<h4>Email :</h4>
+										<input type="text" value="Type here" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Type here';}" required="">	
+									</div>
+									<div class="sign-up">
+										<h4>Password :</h4>
+										<input type="password" value="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">
+										
+									</div>
+									<div class="sign-up">
+										<h4>Re-type Password :</h4>
+										<input type="password" value="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">
+										
+									</div>
+									<div class="sign-up">
+										<input type="submit" value="REGISTER NOW" >
+									</div>
+									
+								</form>
+							</div>
+							<div class="login-right">
+								<h3>Sign in with your account</h3>
+								<form>
+									<div class="sign-in">
+										<h4>Email :</h4>
+										<input type="text" value="Type here" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Type here';}" required="">	
+									</div>
+									<div class="sign-in">
+										<h4>Password :</h4>
+										<input type="password" value="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">
+										<a href="#">Forgot password?</a>
+									</div>
+									<div class="single-bottom">
+										<input type="checkbox"  id="brand" value="">
+										<label for="brand"><span></span>Remember Me.</label>
+									</div>
+									<div class="sign-in">
+										<input type="submit" value="SIGNIN" >
+									</div>
+								</form>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+						<p>By logging in you agree to our <a href="#">Terms and Conditions</a> and <a href="#">Privacy Policy</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- //login -->
 
 
 
