--- a/Assignment/views/user/seller/home.ejs
+++ b/Assignment/views/user/seller/home.ejs
@@ -34,11 +34,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			
 		</div>
 		<!-- header-bot -->
-			<!-- <div class="col-md-4 logo_agile">
+			<div class="col-md-4 logo_agile">
 				
 			</div>
         <!-- header-bot -->
-		<!-- <div class="col-md-4 agileits-social top_content">
+		<div class="col-md-4 agileits-social top_content">
 			<a class="nav-link collapsed" href="/login" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages" style="float: right;">
                     <i class="fas fa-arrow-right btn btn-primary"></i>
@@ -47,7 +47,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="clearfix"></div>
 	</div>
-</div> --> -->
+</div>
 <!-- //header-bot -->
 
 		
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- /new_arrivals --> 
 	<div class="new_arrivals_agile_w3ls_info"> 
 		<div class="container">
-		    <h3 class="wthree_text_info">All <span>Food Item</span></h3>		
+		    <h3 class="wthree_text_info">All <span> Food Item</span></h3>		
 				<div id="horizontalTab">
 						
 					<div class="resp-tabs-container">
@@ -69,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<img src="/assets/img/<%= productInformation[i].imageURL %>" alt="" class="pro-image-back">
 											<div class="men-cart-pro">
 												<div class="inner-men-cart-pro">
-													<a href="/home/manager/customizeProducts/viewProduct" class="link-product-add-cart">Quick View</a>
+													<a href="/home/seller/customizeProducts" class="link-product-add-cart">Quick View</a>
 												</div>
 											</div>
 											<span class="product-new-top"></span>
