--- a/Assignment/views/user/seller/profile.ejs
+++ b/Assignment/views/user/seller/profile.ejs
@@ -38,7 +38,7 @@
                                         <h3><%= userInformation[0].userType %></h3>
                                     </div>
                                 </div><hr>
-                                <a href="/home/manager" class="btn btn-primary btn-user btn-block">
+                                <a href="/home/seller" class="btn btn-primary btn-user btn-block">
                                     Home
                                 </a>
                             </form>
@@ -80,9 +80,7 @@
                                     </div>
                                 </div>
                                 <hr>
-                                <!-- <a href="/login/register" class="btn btn-primary btn-user btn-block">
-                                    Update Account
-                                </a> -->
+                                
                                 <button class="btn btn-primary btn-user btn-block">Update Account</button>
                             </form>
                         </div>
